controller: admin info api
